crates/riri-nce/tests/snapshots/cli_snapshots__policy_maintenance_drops_active_stderr.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: stderr
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing engine constraints...
  Computed engine constraints
  node  ^20.0.0 || ^22.0.0  →  ^20.0.0

  Run nce -v -u to upgrade package.json.
