crates/riri-nce/tests/snapshots/cli_snapshots__policy_supported_eol_bump_stderr.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: stderr
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing engine constraints...
  Computed engine constraints
  node  >=18.0.0  →  >=20.0.0
  npm   *         →  >=9.6.4

  Run nce -v -u to upgrade package.json.
