crates/riri-nce/tests/snapshots/cli_snapshots__policy_unsatisfiable_stderr.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: stderr
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing engine constraints...
  Computed engine constraints

  error: --node-policy=maintenance unsatisfiable
  dropped: ^18.0.0
