crates/riri-nce/tests/snapshots/cli_snapshots__yarn_or_ranges_node_npm_yarn_verbose_stderr.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: stderr
---
  Detecting lockfile...
  Detected yarn.lock
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Scanned node_modules
  Computing engine constraints...
  Computed engine constraints
  node  *  →  ^20.0.0 || ^22.0.0 || ^24.0.0 || >=25.0.0
  npm   *  →  >=9.6.4
  yarn  *  →  ^1.22.4

  Run nce -v -u to upgrade package.json.
